--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,6 +4,10 @@
 @import 'foundation';
 @import 'motion-ui';
 
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+
 // Global styles
 @include foundation-global-styles;
 @include foundation-forms;
@@ -63,6 +67,76 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-h1 {
+.top-bar-left {
+    a {
+        color: white;
+        text-decoration: none;
+        font-size: 2rem;
+        text-transform: uppercase;
+        font-family: 'Anton', sans-serif;
+    }
+}
+
+.menu {
+    a {
+        border: 0.5px solid $white;
+        border-radius: 20px;
+        color: white;
+        padding: 15px;
+    }
+
+    a:hover {
+        background: $white;
+        color: black;
+    }
+
+    li {
+        margin-right: 12px;
+    }
+}
+
+.hero-title {
     text-align: center;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-size: 3rem;
+    margin-top: 30px;
+    
+}
+
+.hero-tagline {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+#hero {
+    text-align: center;
+
+    img {
+        min-width: 45%;
+        height: 300px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .request {
+        background: #6C639E;
+        color: $white;
+        border-radius: 10px;
+        padding: 12px;
+        text-transform: uppercase;
+    }
+
+    .request:hover {
+        background: rgb(72, 58, 151);
+    }
+
+}
+
+.title-bar {
+    margin-top: 20px;
 }
